--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "css-filters-playground",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://georapbox.github.io/css-filters-playground",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/georapbox/css-filters-playground.git"
+  },
+  "author": "George Raptis <georapbox@gmail.com> (georapbox.github.io)",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -26,6 +32,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gh-pages": "~1.1.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -50,7 +57,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
